frontend/app/style.css
html,
body {
  margin: 0px;
  padding: 0px;
  background: black;
  color: #d4d4d4;
  font-family: "Ubuntu", sans-serif;
  overflow: hidden;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
}

#goldenlayout {
  position: absolute;
  top: 41px;
  height: calc(100% - 42px);
  width: 100%;
}

.editor {
  top: 0px;
  left: 0;
  bottom: 0px;
  width: 100%;

  margin: 0px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
  background: black;
  z-index: 0;
}

.run_button {
  width: 40px;
  height: 40px;
  right: 24px;
  top: 1px;
  position: absolute;
}

.run_button span {
  font-size: 48px;
  cursor: pointer;
  text-shadow: 1px 1px #444444;
  color: #aaaaaa;
}

.glcanvas {
  width: 100%;
  height: 100%;

  margin: 0px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
  background: black;
  z-index: 0;
  touch-action: none;
}

.status {
  bottom: 20px;
  right: 20px;
  height: 24px;

  position: absolute;
  color: #dddddd;
  font-family: "Share Tech Mono", monospace;
  font-size: 24px;
}

.picked {
  top: 20px;
  left: 20px;
  position: absolute;
  font-family: "Share Tech Mono", monospace;
  font-size: 24px;
}

.picked pre {
  margin: 0;
  color: #dddddd;
  font-family: "Share Tech Mono", monospace;
  font-size: 24px;
}

#toolbar {
  top: 0px;
  left: 0px;
  width: 100%;
  height: 40px;

  position: absolute;
  overflow: hidden;

  background-color: #1e1e1e;
  color: #d4d4d4;
  border-bottom: 1px solid rgba(191, 191, 191, 0.4);
}

.toolbar-elem {
  margin: 10px;
}

#username input {
  background-color: #1e1e1e;
  color: #d4d4d4;
  border: none;
  font-family: "Ubuntu";
  font-size: 16px;
  text-align: right;
}

.title {
  font-size: 24px;
  font-family: "Share Tech Mono", monospace;
  font-feature-settings: "liga" 0, "calt" 0;
  float: left;
}

.right {
  float: right;
}

code {
  font-family: "Droid Sans Mono", monospace, monospace, "Droid Sans Fallback";
  color: #d4ffd4;
}

a:link {
  color: #d4d4ff;
}

a:visited {
  color: #d4d4ff;
}

a:hover {
  color: #d4ffff;
  text-decoration: underline;
  cursor: pointer;
}

#overlay {
  position: absolute;
  top: 0%;
  left: 0%;
  width: 100%;
  height: 100%;
  z-index: 100;

  backdrop-filter: blur(6px);
  background-color: rgba(0, 0, 0, 0.4);
}

.inner-overlay {
  position: absolute;
  top: 10%;
  left: 10%;
  width: 80%;
  height: 80%;
  padding: 20px;

  overflow: auto;
  background-color: black;
  border: 1px solid rgba(191, 191, 191, 0.4);
}

.small-overlay {
  top: 40%;
  left: 40%;
  width: 20%;
  height: 20%;
}

.centered {
  text-align: center;
}

div.leaderboard {
  margin-left: auto;
  margin-right: auto;
}

.leaderboard table {
  margin-top: 20px;
  margin-left: auto;
  margin-right: auto;
}

.leaderboard table,
th,
td {
  border: 1px solid rgba(191, 191, 191, 1);
  border-collapse: collapse;
}

.leaderboard th,
td {
  padding-left: 40px;
  padding-right: 40px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.leaderboard tr.own-leaderboard-entry {
  color: #47cb47;
}

div.welcome {
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
}

div.documentation {
  padding: 1rem;
  width: calc(min(100% - 2rem, 80em));
}

div.compiler-output {
  padding: 1rem;
}

div.compiler-output pre {
  font-family: "Droid Sans Mono", monospace;
}

div.leaderboard {
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;
}

div.versions {
  padding: 1rem;
}

.errorDecoration {
  background-color: #ff000055;
}

h1.compiling {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

b.error {
  color: #f61d1d;
}

#text-size {
  position: absolute;
  visibility: hidden;
  font-family: "Droid Sans Mono", "monospace";
  font-size: 14px;
}

/* GoldenLayout */
.lm_header {
  background-color: #1e1e1e;
  height: 24px;
}

.lm_header .lm_tab {
  box-shadow: none;
  font-family: Ubuntu;
  font-size: 14px;
  margin-top: 0;
  padding-top: 2px;
  padding-bottom: 2px;
  height: 16px;
}

.lm_header .lm_tab.lm_active {
  background-color: #162f17;
  box-shadow: none;
  padding-bottom: 2px;
}

.lm_maximised .lm_header {
  background-color: #1e1e1e;
}

#tournament_results {
  position: absolute;
  top: 41px;
  height: calc(100% - 42px);
  width: 100%;
  padding: 1em;
  z-index: 100;
}

#tournament_results table {
  border-collapse: collapse;
}

